# app

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  readme (2).md  readme.md
app/: TASK.txt  docker-compose.yml  entrypoint.sh
app/src/vsuet_accounting/: __init__.py
app/src/vsuet_accounting/application/: services.py
app/src/vsuet_accounting/domain/: schemas.py
app/src/vsuet_accounting/infrastructure/db/: bootstrap.py  init_db.py  models.py
db/: schema.sql  seed.sql
src/vsuet_accounting/: app.py  config.py
src/vsuet_accounting/infrastructure/: backup.py
src/vsuet_accounting/infrastructure/db/: session.py
src/vsuet_accounting/presentation/: __init__.py  ui.py
